Fix content sync bug, improve mobile UI

--- a/write.html
+++ b/write.html
@@ -29,11 +29,13 @@
         <div id="editor-screen" class="screen hidden">
             <header>
                 <div class="header-left">
-                    <span class="logo">~/write</span>
+                    <a href="/" class="logo">~/blog</a>
+                    <span class="header-sep">/</span>
+                    <span class="header-current">write</span>
                 </div>
                 <div class="header-right">
                     <span id="save-status"></span>
-                    <button id="disconnect" class="text-btn">disconnect</button>
+                    <button id="disconnect" class="text-btn disconnect-btn">disconnect</button>
                 </div>
             </header>
 
